fix flexbox appbar for missions route

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -36,8 +36,7 @@
 .appBarLanguageDiv {
   display: flex;
   align-items: center;
-  width: 100%;
-  margin-left: 1rem;
+  margin-left: auto;
 }
 
 .missionDialogPanels {
